--- a/stats/templates/layout.html
+++ b/stats/templates/layout.html
@@ -41,7 +41,9 @@
 
     <div class="container-fluid" id="content">
       <div class="row">
+        <div class="col-md-8">
           {% block content %}{% endblock %}
+        </div>
       </div>
     </div>
 
